<resources>
    <string name="app_name">子午</string>

    <string name="plan_today">今天</string>
    <string name="plan_this_week">近七天</string>
    <string name="plan_long_time">长期计划</string>
    <string name="ad_item_plan_no_plan">还没有制定计划哦</string>
    <string name="ad_item_plan_no_plan_add">快来制定计划吧</string>
    <string name="ad_item_plan_recorded_time">%1$s已经进行了%2$s</string>
    <string name="ad_item_plan_record_start">开始</string>
    <string name="ad_item_plan_record_stop">停止</string>
    <string name="ad_item_plan_record_finish">完成</string>

    <string name="bottom_indicator_task">任务</string>
    <string name="bottom_indicator_record">记录</string>
    <string name="bottom_indicator_me">我的</string>

    <string name="add_plan_detail_ok">确定</string>
    <string name="add_plan_detail_cancel">取消</string>

    <string name="add_plan_detail_edit_name">名称</string>
    <string name="add_plan_detail_edit_tag">标签</string>
    <string name="add_plan_detail_edit_priority">优先级</string>
    <string name="add_plan_detail_edit_plan_time">计划用时</string>
    <string name="add_plan_detail_edit_join_parent_id">加入周计划</string>

    <string name="add_plan_detail_edit_add">添加</string>
    <string name="add_plan_detail_edit_more">更多选项</string>
    <string name="add_plan_summary_delete">删除</string>
    <string name="add_plan_detail_edit_text_name_no_string">计划名称不能为空</string>

    <string name="fr_record_today_plan">今日计划</string>
    <string name="notification_start_time">00:00:00</string>

    <string name="dialog_rename_plan">重命名</string>
    <string name="dialog_delete_plan">删除</string>
    <string name="dialog_transfer_plan">移动至</string>
    <string name="dialog_check_plan_detail">查看详情</string>

    <string name="text_ok">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_input_prompt">请输入名称：</string>
    <string name="text_rename">重命名</string>

    <string name="text_delete_confirm">删除%s</string>
    <string name="text_delete">删除</string>
    <string name="text_delete_description">此操作会删除所有的数据，删除后数据不可恢复，确定删除吗？</string>

    <string name="save_modify">保存</string>
    <string name="cancel_modify">取消</string>

    <string name="before_today">今天以前</string>
    <string name="add_new_task">添加任务</string>
    <string name="task_note">备注</string>
    <string name="record_category_all">全部分类</string>
    <string name="record_time_duration_select">时长</string>
    <string name="record_search">搜索</string>
    <string name="record_week_chart_title">周记录</string>
    <string name="record_time_duration_name">时长</string>
    <string name="record_this_week">本周</string>
    <string name="record_time_longest">时间最长</string>
    <string name="search_history">历史记录</string>
    <string name="clear_search_history">清空记录</string>
</resources>
