<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/ad_tv_add_plan_edit_name"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:text="@string/add_plan_detail_edit_name"
            android:gravity="center_vertical" />
        <EditText
            android:id="@+id/ad_et_add_plan_edit_name"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/ad_tv_add_plan_edit_name"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/ad_tv_add_plan_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text="@string/add_plan_detail_edit_add"
            android:gravity="center_vertical"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ad_ll_add_plan_more_item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">
            <TextView
                style="@style/add_plan_detail_item_left_text_view"
                android:text="@string/add_plan_detail_edit_tag"/>
            <EditText
                android:id="@+id/ad_et_add_plan_edit_plan_tag"
                style="@style/add_plan_detail_item_right_edit_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">
            <TextView
                style="@style/add_plan_detail_item_left_text_view"
                android:text="@string/add_plan_detail_edit_priority"/>
            <EditText
                android:id="@+id/ad_et_add_plan_edit_priority"
                style="@style/add_plan_detail_item_right_edit_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">
            <TextView
                style="@style/add_plan_detail_item_left_text_view"
                android:text="@string/add_plan_detail_edit_plan_time"/>
            <EditText
                android:id="@+id/ad_et_add_plan_edit_plan_time"
                style="@style/add_plan_detail_item_right_edit_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">
            <TextView
                style="@style/add_plan_detail_item_left_text_view"
                android:text="@string/add_plan_detail_edit_join_parent_id"/>
            <EditText
                android:id="@+id/ad_et_add_plan_edit_join_parent_id"
                style="@style/add_plan_detail_item_right_edit_text"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/ad_tv_add_plan_more_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_plan_detail_edit_more"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="15sp"
        android:textSize="16sp"/>
</LinearLayout>