<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            style="@style/plan_detail_item_left_text_view"
            android:text="@string/add_plan_detail_edit_name" />
        <TextView
            android:id="@+id/ad_tv_plan_detail_name"
            style="@style/plan_detail_item_right_text_view"
            tools:text="锻炼"/>
        <EditText
            android:id="@+id/ad_et_plan_detail_edit_name"
            style="@style/plan_detail_item_right_text_view"
            android:visibility="gone"
            tools:text="锻炼"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            style="@style/plan_detail_item_left_text_view"
            android:text="@string/add_plan_detail_edit_tag" />
        <TextView
            android:id="@+id/ad_tv_plan_detail_tag"
            style="@style/plan_detail_item_right_text_view"
            tools:text="锻炼"/>
        <EditText
            android:id="@+id/ad_et_plan_detail_edit_tag"
            style="@style/plan_detail_item_right_text_view"
            android:visibility="gone"
            tools:text="锻炼"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            style="@style/plan_detail_item_left_text_view"
            android:text="@string/add_plan_detail_edit_priority" />
        <TextView
            android:id="@+id/ad_tv_plan_detail_priority"
            style="@style/plan_detail_item_right_text_view"
            tools:text="锻炼"/>
        <EditText
            android:id="@+id/ad_et_plan_detail_edit_priority"
            style="@style/plan_detail_item_right_text_view"
            android:visibility="gone"
            tools:text="锻炼"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            style="@style/plan_detail_item_left_text_view"
            android:text="@string/add_plan_detail_edit_plan_time"/>
        <TextView
            android:id="@+id/ad_tv_plan_detail_plan_time"
            style="@style/plan_detail_item_right_text_view"
            tools:text="锻炼"/>
        <EditText
            android:id="@+id/ad_et_plan_detail_edit_plan_time"
            style="@style/plan_detail_item_right_text_view"
            android:visibility="gone"
            tools:text="锻炼"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            style="@style/plan_detail_item_left_text_view"
            android:text="@string/add_plan_detail_edit_join_parent_id" />
        <TextView
            android:id="@+id/ad_tv_plan_detail_join_parent_id"
            style="@style/plan_detail_item_right_text_view"
            tools:text="锻炼"/>
        <EditText
            android:id="@+id/ad_et_plan_detail_edit_join_parent_id"
            style="@style/plan_detail_item_right_text_view"
            android:visibility="gone"
            tools:text="锻炼"/>
    </RelativeLayout>
</LinearLayout>