<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_confirm_delete_plan_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_dp_14"
        android:layout_marginTop="@dimen/dimen_dp_17"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_sp_16" />

    <TextView
        android:id="@+id/dialog_name_delete_text_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_dp_10"
        android:layout_marginLeft="@dimen/dimen_dp_5"
        android:layout_marginRight="@dimen/dimen_dp_5"
        android:layout_marginTop="@dimen/dimen_dp_10"
        android:text="@string/text_delete_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_dp_48"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_cancel"
            android:textSize="@dimen/text_size_sp_16" />

        <View
            style="@style/rce_vertical_light_thin_divider"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_delete"
            android:textColor="@color/textBaseColor"
            android:textSize="@dimen/text_size_sp_16" />
    </LinearLayout>
</LinearLayout>