<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.github.tinkerti.ziwu.ui.activity.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v4.view.ViewPager
            android:id="@+id/ac_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ac_ll_bottom_indicator"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/whiteColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.github.tinkerti.ziwu.ui.widget.TabIndicatorItemView
            android:id="@+id/bottom_indicator_plan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:IndicatorButton="@drawable/bottom_item_one_drawable_selector"
            app:IndicatorText="@string/bottom_indicator_task" />

        <com.github.tinkerti.ziwu.ui.widget.TabIndicatorItemView
            android:id="@+id/bottom_indicator_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:IndicatorButton="@drawable/bottom_item_two_drawable_selector"
            app:IndicatorText="@string/bottom_indicator_record" />

        <com.github.tinkerti.ziwu.ui.widget.TabIndicatorItemView
            android:id="@+id/bottom_indicator_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:IndicatorButton="@drawable/bottom_item_three_drawable_selector"
            app:IndicatorText="@string/bottom_indicator_me" />
    </LinearLayout>
</LinearLayout>
