<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fr_tv_plan_type_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/fr_record_today_plan"
        android:visibility="gone" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/fr_pc_plan_record_summary"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_dp_60">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_dp_25"
            android:gravity="center">

            <TextView
                style="@style/fr_record_sub_title_text"
                android:text="@string/record_category_all" />

            <ImageView
                style="@style/fr_record_sub_title_image"
                android:src="@mipmap/triangle_pull_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center">

            <TextView
                style="@style/fr_record_sub_title_text"
                android:text="@string/record_time_duration_select" />

            <ImageView
                style="@style/fr_record_sub_title_image"
                android:src="@mipmap/triangle_pull_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginRight="@dimen/dimen_dp_25">

            <View
                android:layout_width="@dimen/dimen_dp_1"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dimen_dp_20"
                android:layout_marginTop="@dimen/dimen_dp_20"
                android:layout_marginRight="@dimen/dimen_dp_10"
                android:background="@color/divider_line" />

            <TextView
                style="@style/fr_record_sub_title_text"
                android:text="@string/record_search" />
        </LinearLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone" />

    <TextView
        android:id="@+id/fr_tv_plan_no_record"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="暂无记录"
        android:visibility="gone" />
</LinearLayout>
